Импорт БЭМ-блоков и normalize

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,36 @@
-body {
-  background: #dedede;
-}
+@import "normalize.less";
+@import "variables.less";
+@import "general.less";
+// index.html
+@import "blocks/button.less";
+@import "blocks/front-page.less";
+@import "blocks/inner-page.less";
+@import "blocks/page-header.less";
+@import "blocks/logo.less";
+@import "blocks/main-nav.less";
+@import "blocks/intro.less";
+@import "blocks/apps.less";
+@import "blocks/features.less";
+@import "blocks/reviews.less";
+@import "blocks/reviews-slider.less";
+@import "blocks/review.less";
+@import "blocks/rate.less";
+@import "blocks/rates.less";
+@import "blocks/contacts.less";
+@import "blocks/contact.less";
+@import "blocks/footer.less";
+@import "blocks/social.less";
+// photo.html
+@import "blocks/photos.less";
+@import "blocks/photo-blog.less";
+@import "blocks/likes.less";
+@import "blocks/uploads.less";
+@import "blocks/filters.less";
+@import "blocks/range.less";
+// form.html
+@import "blocks/contest.less";
+@import "blocks/form.less";
+@import "blocks/achievement.less";
+@import "blocks/contact-form.less";
+@import "blocks/apps-fields.less";
+@import "blocks/comments.less";
