Начало верстки с препроцессором

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,16 +1,18 @@
 @import "normalize.less";
 @import "variables.less";
+@import "mixin.less";
+@import "fonts.less";
 @import "general.less";
 // index.html
 @import "blocks/button.less";
 @import "blocks/front-page.less";
 @import "blocks/inner-page.less";
 @import "blocks/page-header.less";
-@import "blocks/logo.less";
 @import "blocks/main-nav.less";
 @import "blocks/intro.less";
 @import "blocks/apps.less";
 @import "blocks/features.less";
+@import "blocks/feature.less";
 @import "blocks/reviews.less";
 @import "blocks/reviews-slider.less";
 @import "blocks/review.less";
@@ -20,6 +22,8 @@
 @import "blocks/contact.less";
 @import "blocks/footer.less";
 @import "blocks/social.less";
+@import "blocks/map.less";
+@import "blocks/page-footer.less";
 // photo.html
 @import "blocks/photos.less";
 @import "blocks/photo-blog.less";
@@ -30,7 +34,3 @@
 // form.html
 @import "blocks/contest.less";
 @import "blocks/form.less";
-@import "blocks/achievement.less";
-@import "blocks/contact-form.less";
-@import "blocks/apps-fields.less";
-@import "blocks/comments.less";
