Исправление ошибок Travis

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,11 +1,11 @@
 .page-header {
   box-sizing: border-box;
-  background-image: url('../img/bg-back-mobile@1x.jpg');
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   .background();
 
   &__top {
     min-height: 66px;
-    background-color:  fade(@black, 30%);
+    background-color: fade(@black, 30%);
 
     &--open {
       background-color: @bg-darkblue;
@@ -23,12 +23,12 @@
     width: 50px;
     height: 24px;
     .button-reset();
-    background-image: url('../img/icon-menu-burger.svg');
+    background-image: url("../img/icon-menu-burger.svg");
     .background();
 
     &--open {
       width: 23px;
-      background-image: url('../img/icon-menu-cross.svg');
+      background-image: url("../img/icon-menu-cross.svg");
     }
   }
 
@@ -36,5 +36,4 @@
     padding: 23px 20px;
     .link-reset();
   }
-
 }
