--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -23,16 +23,15 @@
     .background(50%, 50%, auto);
 
     &--twitter {
-      background-image: url('../img/icon-twitter.svg');
+      background-image: url("../img/icon-twitter.svg");
     }
 
     &--facebook {
-      background-image: url('../img/icon-facebook.svg');
+      background-image: url("../img/icon-facebook.svg");
     }
 
     &--youtube {
-      background-image: url('../img/icon-youtube.svg');
+      background-image: url("../img/icon-youtube.svg");
     }
   }
-
 }
