--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -7,7 +7,7 @@
 @text-blood: #d22856;
 @purpure: #d22856;
 @black: #000000;
-@white: #FFFFFF;
+@white: #ffffff;
 @wood-green: #2aab6d;
 
 @mobile-width: 320px;
