--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,4 @@
 .contacts {
-
   &__title {
     margin: 38px 0;
 
@@ -22,7 +21,7 @@
       width: 100%;
       height: 100%;
 
-      background-image: url('../img/bg-triangle-white-footer.svg');
+      background-image: url("../img/bg-triangle-white-footer.svg");
       .background(50%, 0%, auto);
     }
   }
