--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,5 +1,4 @@
 .features {
-
   padding-top: 47px;
   overflow: hidden;
 
@@ -12,7 +11,7 @@
     padding-top: 118px;
 
     background-color: @bg-gray;
-    background-image: url('../img/bg-triangle-white.svg');
+    background-image: url("../img/bg-triangle-white.svg");
     .background(50%, 0%, auto);
   }
 
