--- a/source/less/blocks/filters.less
+++ b/source/less/blocks/filters.less
@@ -1,8 +1,4 @@
 .filters {
-
-  &__toggles {
-  }
-
   &__toggle {
     width: 50px;
     height: 50px;
@@ -11,15 +7,15 @@
     .background(50%, 50%, auto);
 
     &--crop {
-      background-image: url('../img/icon-editor-crop.svg');
+      background-image: url("../img/icon-editor-crop.svg");
     }
 
     &--fill {
-      background-image: url('../img/icon-editor-fill.svg');
+      background-image: url("../img/icon-editor-fill.svg");
     }
 
     &--contrast {
-      background-image: url('../img/icon-editor-contrast.svg');
+      background-image: url("../img/icon-editor-contrast.svg");
     }
 
   }
