--- a/source/less/blocks/likes.less
+++ b/source/less/blocks/likes.less
@@ -8,14 +8,14 @@
 
   &__button {
     position: absolute;
-    top: calc(50% - 1.5em/2);
+    top: calc(50% - 1.5em / 2);
     left: 0;
     .button-reset();
 
     width: 1.5em;
     height: 1.5em;
 
-    background-image: url('../img/icon-heart.svg');
+    background-image: url("../img/icon-heart.svg");
     .background(50%, 50%, 1.2em);
   }
 
