--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     background-color: @bg-lightgrey;
-    background-image: url('../img/bg-map-mobile@1x.png');
+    background-image: url("../img/bg-map-mobile@1x.png");
     .background(50%, 100%);
   }
 }
