--- a/source/less/blocks/rate.less
+++ b/source/less/blocks/rate.less
@@ -1,5 +1,4 @@
 .rate {
-
   &__header {
     position: relative;
 
@@ -45,7 +44,7 @@
       width: 74px;
       height: 73px;
 
-      background-image: url('../img/bg-hit.svg');
+      background-image: url("../img/bg-hit.svg");
       .background();
 
       transform: rotate(45deg);
@@ -83,17 +82,15 @@
     .background(100%, 100%);
 
     &--yes {
-      background-image: url('../img/icon-yes.svg');
+      background-image: url("../img/icon-yes.svg");
       width: 31px;
       height: 22px;
     }
 
     &--no {
-      background-image: url('../img/icon-no.svg');
+      background-image: url("../img/icon-no.svg");
       width: 27px;
       height: 27px;
     }
   }
-
-
 }
