--- a/source/less/blocks/rates.less
+++ b/source/less/blocks/rates.less
@@ -3,7 +3,7 @@
 
   padding: 100px 0 110px 0;
   background-color: @bg-gray;
-  background-image: url('../img/bg-triangle-white.svg');
+  background-image: url("../img/bg-triangle-white.svg");
   .background(50%, 0%, auto);
 
   &__table {
@@ -26,5 +26,4 @@
   &__toggles {
     text-align: center;
   }
-
 }
