Исправление ошибок Travis

--- a/source/less/blocks/apps.less
+++ b/source/less/blocks/apps.less
@@ -17,7 +17,7 @@
     color: @white;
     font-weight: bold;
     border-color: @white;
-    .block-reset();
+    display: block;
   }
 
   &__wrapper {
