--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -29,7 +29,7 @@
   &__label-in-list {
     position: relative;
     display: inline-block;
-    padding: 10px 0px 10px 10px;
+    padding: 10px 0 10px 10px;
 
     font-size: @body-font-size + 4px;
     font-weight: 400;
@@ -53,7 +53,6 @@
       border: 2px solid @bg-gray-dark;
       background-color: @white;
     }
-
   }
 
   &__check:checked + &__checkbox::after {
