--- a/source/less/blocks/rate.less
+++ b/source/less/blocks/rate.less
@@ -11,12 +11,10 @@
     color: @white;
 
     background-color: @bg-darkblue;
-
-    box-sizing: border-box;
   }
 
   &__price {
-    .block-reset();
+    display: block;
     font-weight: lighter;
     font-size: @body-font-size + 6px;
     line-height: 30px;
