Рефакторинг по критерию Д11.

--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -1,57 +1,60 @@
-.contest {
-  &__wrapper {
-    .wrapper(@mobile-width);
-  }
+.contest__wrapper {
+  .wrapper(@mobile-width);
+}
 
-  &__header {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
+.contest__header {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 
-  &__title {
-    font-size: @body-font-size;
-    font-weight: 400;
-    line-height: 30px;
-    color: @bg-darkblue;
-    text-align: center;
-  }
+.contest__title {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: center;
+  color: @bg-darkblue;
+}
 
-  &__contestant {
-    padding-bottom: 40px;
-    display: block;
-    border: none;
-    background-color: @white;
-  }
+.contest__contestant {
+  display: block;
+  padding-bottom: 40px;
 
-  &__achievement {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    display: block;
-    border: none;
-    background-color: @bg-gray;
-  }
+  background-color: @white;
+  border: none;
+}
 
-  &__contact {
-    padding-top: 20px;
-    padding-bottom: 40px;
-    display: block;
-    border: none;
-    background-color: @white;
-  }
+.contest__achievement {
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 20px;
 
-  &__apps {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    display: block;
-    border: none;
-    background-color: @bg-gray;
-  }
+  background-color: @bg-gray;
+  border: none;
+}
 
-  &__comment {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    display: block;
-    border: none;
-    background-color: @white;
-  }
+.contest__contact {
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 40px;
+
+  background-color: @white;
+  border: none;
+}
+
+.contest__apps {
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  background-color: @bg-gray;
+  border: none;
+}
+
+.contest__comment {
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  background-color: @white;
+  border: none;
 }
