--- a/source/less/blocks/feature.less
+++ b/source/less/blocks/feature.less
@@ -1,14 +1,14 @@
 .feature {
   color: @bg-darkblue;
   text-align: center;
+}
 
-  &__title {
-    font-size: @body-font-size + 4px;
-    line-height: 10px;
-  }
+.feature__title {
+  font-size: 18px;
+  line-height: 10px;
+}
 
-  &__info {
-    font-size: @body-font-size;
-    line-height: 24px;
-  }
+.feature__info {
+  font-size: 14px;
+  line-height: 24px;
 }
