--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,35 +1,35 @@
 .features {
   padding-top: 47px;
   overflow: hidden;
+}
 
-  &__item {
-    padding: 0 10px 8px 10px;
-  }
+.features__item {
+  padding: 0 10px 8px 10px;
+}
 
-  &__list {
-    .list-reset();
-    padding-top: 118px;
+.features__list {
+  .list-reset();
+  padding-top: 118px;
 
-    background-color: @bg-gray;
-    background-image: url("../img/bg-triangle-white.svg");
-    .background(50%, 0%, auto);
-  }
+  background-color: @bg-gray;
+  background-image: url("../img/bg-triangle-white.svg");
+  .background(50%, 0%, auto);
+}
 
-  &__image {
-    position: relative;
-    bottom: -35px;
-    margin: 0 auto;
-    display: block;
-  }
+.features__image {
+  position: relative;
+  bottom: -35px;
+  margin: 0 auto;
+  display: block;
+}
 
-  &__title {
-    font-size: @body-font-size + 10px;
-    font-weight: lighter;
-    text-align: center;
-    color: @bg-darkblue;
-  }
+.features__title {
+  font-size: 24px;
+  font-weight: lighter;
+  text-align: center;
+  color: @bg-darkblue;
+}
 
-  &__wrapper {
-    .wrapper(@mobile-width);
-  }
+.features__wrapper {
+  .wrapper(@mobile-width);
 }
