--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,33 +1,33 @@
-.footer {
-  &__wrapper {
-    .wrapper(@mobile-width);
-  }
+.footer__wrapper {
+  .wrapper(@mobile-width);
+}
 
-  &__logo {
-    display: inline-block;
-    width: 100%;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    text-align: center;
-  }
+.footer__logo {
+  display: inline-block;
+  width: 100%;
+  margin-top: 40px;
+  margin-bottom: 40px;
 
-  &__social {
-    width: 100%;
-  }
+  text-align: center;
+}
 
-  &__developper {
-    width: 100%;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    text-align: center;
-  }
+.footer__social {
+  width: 100%;
+}
 
-  &__copyright {
-    display: inline-block;
+.footer__developper {
+  width: 100%;
+  margin-top: 40px;
+  margin-bottom: 40px;
 
-    font-size: @body-font-size;
-    font-weight: 400;
-    line-height: 18px;
-    color: @bg-darkblue;
-  }
+  text-align: center;
+}
+
+.footer__copyright {
+  display: inline-block;
+
+  font-size: @body-font-size;
+  font-weight: 400;
+  line-height: 18px;
+  color: @bg-darkblue;
 }
