--- a/source/less/blocks/photo-blog.less
+++ b/source/less/blocks/photo-blog.less
@@ -1,66 +1,66 @@
 .photo-blog {
   margin-bottom: 20px;
+}
 
-  &__link {
-    display: block;
-    width: 100%;
-    min-height: 137px;
-    overflow: hidden;
-  }
+.photo-blog__link {
+  display: block;
+  width: 100%;
+  min-height: 137px;
+  overflow: hidden;
+}
 
-  &__image {
-    display: block;
-    width: 100%;
-    height: auto;
-    min-height: 137px;
-    object-fit: cover;
-    background-color: @bg-gray-dark;
-  }
+.photo-blog__image {
+  display: block;
+  width: 100%;
+  height: auto;
+  min-height: 137px;
+  object-fit: cover;
+  background-color: @bg-gray-dark;
+}
 
-  &__of-day {
-    position: absolute;
-    top: 0;
-    right: 20px;
+.photo-blog__of-day {
+  position: absolute;
+  top: 0;
+  right: 20px;
 
-    width: calc(50% - 20px);
-    padding: 7px 12px;
+  width: calc(50% - 20px);
+  padding: 7px 12px;
 
-    font-size: @body-font-size - 2px;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-align: center;
-    color: @white;
+  font-size: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+  color: @white;
 
-    background-color: @text-blood;
-  }
+  background-color: @text-blood;
+}
 
-  &__wrapper {
-    .wrapper(@mobile-width);
-  }
+.photo-blog__wrapper {
+  .wrapper(@mobile-width);
+}
 
-  &__content {
-    padding: 24px 16px;
-    background-color: @bg-gray;
-  }
+.photo-blog__content {
+  padding: 24px 16px;
+  background-color: @bg-gray;
+}
 
-  &__author {
-    font-size: @body-font-size;
-    margin: 0;
-    font-weight: bold;
-  }
+.photo-blog__author {
+  font-size: 14px;
+  margin: 0;
+  font-weight: bold;
+}
 
-  &__date {
-    font-size: @body-font-size - 2px;
-    font-weight: lighter;
-    text-transform: uppercase;
-  }
+.photo-blog__date {
+  font-size: 12px;
+  font-weight: lighter;
+  text-transform: uppercase;
+}
 
-  &__comment {
-    margin: 0;
-    font-size: @body-font-size;
-  }
+.photo-blog__comment {
+  margin: 0;
+  font-size: 14px;
+}
 
-  &__likes {
-    margin-top: 12px;
-  }
+.photo-blog__likes {
+  margin-top: 12px;
 }
