--- a/source/less/blocks/photos.less
+++ b/source/less/blocks/photos.less
@@ -1,18 +1,16 @@
-.photos {
-  &__wrapper {
-    .wrapper(@mobile-width);
-  }
+.photos__wrapper {
+  .wrapper(@mobile-width);
+}
 
-  &__header {
-    margin-top: 55px;
-    margin-bottom: 55px;
-  }
+.photos__header {
+  margin-top: 55px;
+  margin-bottom: 55px;
+}
 
-  &__title {
-    font-size: @body-font-size;
-    font-weight: 400;
-    line-height: 30px;
-    color: @bg-darkblue;
-    text-align: center;
-  }
+.photos__title {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 30px;
+  color: @bg-darkblue;
+  text-align: center;
 }
