--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -1,15 +1,16 @@
 .review {
   text-align: center;
+}
 
-  &__author {
-    font-size: @body-font-size + 4px;
-    line-height: 30px;
-    font-weight: bold;
-  }
+.review__author {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
+}
 
-  &__text {
-    font-size: @body-font-size;
-    line-height: 30px;
+.review__text {
+  font-size: 14px;
+  line-height: 30px;
 
     &::before {
       content: "«";
@@ -19,4 +20,3 @@
       content: "»";
     }
   }
-}
