--- a/source/less/blocks/apps.less
+++ b/source/less/blocks/apps.less
@@ -1,26 +1,26 @@
 .apps {
   padding: 28px 0;
+}
 
-  &__list {
-    .list-reset();
-  }
+.apps__list {
+  .list-reset();
+}
 
-  &__info {
-    font-weight: lighter;
-    text-align: center;
-    color: @white;
-    line-height: 24px;
-  }
+.apps__info {
+  font-weight: lighter;
+  text-align: center;
+  color: @white;
+  line-height: 24px;
+}
 
-  &__button {
-    width: 100%;
-    color: @white;
-    font-weight: bold;
-    border-color: @white;
-    display: block;
-  }
+.apps__button {
+  width: 100%;
+  color: @white;
+  font-weight: bold;
+  border-color: @white;
+  display: block;
+}
 
-  &__wrapper {
-    .wrapper(@mobile-width);
-  }
+.apps__wrapper {
+  .wrapper(@mobile-width);
 }
