--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -1,23 +1,24 @@
 .contact {
   margin-bottom: 28px;
+}
 
-  &__title {
-    margin: 0;
+.contact__title {
+  margin: 0;
 
-    font-size: @body-font-size + 4px;
-    font-weight: bold;
-    line-height: 30px;
-    text-align: center;
-    color: @bg-darkblue;
-  }
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 30px;
+  text-align: center;
+  color: @bg-darkblue;
+}
 
-  &__link {
-    display: block;
-    margin: 0;
-    font-size: @body-font-size + 10px;
-    font-weight: lighter;
-    line-height: 30px;
-    text-align: center;
-    color: @text-blood;
-  }
+.contact__link {
+  display: block;
+  margin: 0;
+
+  font-size: 24px;
+  font-weight: lighter;
+  line-height: 30px;
+  text-align: center;
+  color: @text-blood;
 }
