--- a/source/less/blocks/filters.less
+++ b/source/less/blocks/filters.less
@@ -1,21 +1,19 @@
-.filters {
-  &__toggle {
-    width: 50px;
-    height: 50px;
+.filters__toggle {
+  width: 50px;
+  height: 50px;
 
-    .button-reset();
-    .background(50%, 50%, auto);
+  .button-reset();
+  .background(50%, 50%, auto);
 
-    &--crop {
-      background-image: url("../img/icon-editor-crop.svg");
-    }
+  &--crop {
+    background-image: url("../img/icon-editor-crop.svg");
+  }
 
-    &--fill {
-      background-image: url("../img/icon-editor-fill.svg");
-    }
+  &--fill {
+    background-image: url("../img/icon-editor-fill.svg");
+  }
 
-    &--contrast {
-      background-image: url("../img/icon-editor-contrast.svg");
-    }
+  &--contrast {
+    background-image: url("../img/icon-editor-contrast.svg");
   }
 }
