--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,27 +1,27 @@
 .intro {
   box-sizing: border-box;
+}
 
-  &__apps {
-    background-color: @bg-darkestblue;
-  }
+.intro__apps {
+  background-color: @bg-darkestblue;
+}
 
-  &__image {
-    margin-top: 110px;
-  }
+.intro__image {
+  margin-top: 110px;
+}
 
-  &__title {
-    width: 100%;
-    margin-top: 36px;
-    padding-bottom: 85px;
+.intro__title {
+  width: 100%;
+  margin-top: 36px;
+  padding-bottom: 85px;
 
-    font-size: @body-font-size + 10px;
-    font-weight: lighter;
-    line-height: 30px;
-    color: @white;
-    text-align: center;
-  }
+  font-size: 24px;
+  font-weight: lighter;
+  line-height: 30px;
+  color: @white;
+  text-align: center;
+}
 
-  &__wrapper {
-    .wrapper(@mobile-width);
-  }
+.intro__wrapper {
+  .wrapper(@mobile-width);
 }
