--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -2,20 +2,21 @@
   font-size: 18px;
   font-weight: bold;
   text-transform: uppercase;
+}
 
-  &__list {
-    .list-reset();
-  }
+.main-nav__list {
+  .list-reset();
+}
 
-  &__item {
-    // background-color: @bg-darkblue;
-    box-shadow: inset 0 1px 0 0 fade(@white, 15%), 0 1px 0 0 @black;
-    margin-bottom: 2px;
-  }
+.main-nav__item {
+  box-shadow:
+    inset 0 1px 0 0 fade(@white, 15%),
+    0 1px 0 0 @black;
+  margin-bottom: 2px;
+}
 
-  &__link {
-    padding: 16px;
-    color: @white;
-    display: block;
-  }
+.main-nav__link {
+  display: block;
+  padding: 16px;
+  color: @white;
 }
