--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,11 +1,11 @@
 .map {
   position: relative;
+}
 
-  &__img {
-    width: 100%;
-    height: 100%;
-    background-color: @bg-lightgrey;
-    background-image: url("../img/bg-map-mobile@1x.png");
-    .background(50%, 100%);
-  }
+.map__img {
+  width: 100%;
+  height: 100%;
+  background-color: @bg-lightgrey;
+  background-image: url("../img/bg-map-mobile@1x.png");
+  .background(50%, 100%);
 }
