--- a/source/less/blocks/range.less
+++ b/source/less/blocks/range.less
@@ -1,34 +1,32 @@
-.range {
-  &__controls {
-    position: relative;
-    height: 41px;
+.range__controls {
+  position: relative;
+  height: 41px;
 
-    padding-top: 26px;
-    padding-left: 20px;
-    padding-right: 20px;
+  padding-top: 26px;
+  padding-left: 20px;
+  padding-right: 20px;
 
-    border-radius: 5px;
+  border-radius: 5px;
 
-    box-sizing: content-box;
-  }
+  box-sizing: content-box;
+}
 
-  &__scale {
-    height: 2px;
-    background-color: @black;
-  }
+.range__scale {
+  height: 2px;
+  background-color: @black;
+}
 
-  &__runner {
-    position: absolute;
-    top: calc(50% - 15px);
-    left: 75%;
+.range__runner {
+  position: absolute;
+  top: calc(50% - 15px);
+  left: 75%;
 
-    width: 14px;
-    height: 14px;
-    padding: 0;
+  width: 14px;
+  height: 14px;
+  padding: 0;
 
-    border: 2px solid @purpure;
-    background-color: @white;
-    border-radius: 50%;
-    cursor: pointer;
-  }
+  border: 2px solid @text-blood;
+  background-color: @white;
+  border-radius: 50%;
+  cursor: pointer;
 }
