--- a/source/less/blocks/rates.less
+++ b/source/less/blocks/rates.less
@@ -5,25 +5,25 @@
   background-color: @bg-gray;
   background-image: url("../img/bg-triangle-white.svg");
   .background(50%, 0%, auto);
+}
 
-  &__table {
-    position: relative;
-    left: calc(50% - @table-width/2);
-    border-spacing: 0;
-    min-width: @table-width;
+.rates__table {
+  position: relative;
+  left: calc(50% - @table-width/2);
+  border-spacing: 0;
+  min-width: @table-width;
 
-    margin: 0 auto;
-    padding-top: 20px;
+  margin: 0 auto;
+  padding-top: 20px;
 
-    border-collapse: separate;
-    border-spacing: 1px;
-  }
+  border-collapse: separate;
+  border-spacing: 1px;
+}
 
-  &__wrapper {
-    .wrapper(@mobile-width);
-  }
+.rates__wrapper {
+  .wrapper(@mobile-width);
+}
 
-  &__toggles {
-    text-align: center;
-  }
+.rates__toggles {
+  text-align: center;
 }
