--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,15 +1,15 @@
 .reviews {
   padding-top: 50px;
+}
 
-  &__list {
-    .list-reset();
-  }
+.reviews__list {
+  .list-reset();
+}
 
-  &__toggles {
-    text-align: center;
-  }
+.reviews__toggles {
+  text-align: center;
+}
 
-  &__wrapper {
-    .wrapper(@mobile-width);
-  }
+.reviews__wrapper {
+  .wrapper(@mobile-width);
 }
