исправление ошибок Travis

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -108,7 +108,7 @@
   display: inline-block;
   padding: 10px 20px;
 
-  font-size: @body-font-size + 4px;
+  font-size: 18px;
   line-height: 30px;
   color: @bg-darkblue;
 
@@ -121,7 +121,7 @@
   margin-bottom: 20px;
   padding: 20px 20px 20px 20px;
 
-  font-size: @body-font-size + 4px;
+  font-size: 18px;
   line-height: 30px;
   color: @bg-darkblue;
 
@@ -147,7 +147,7 @@
 .form__submit-text {
   margin-top: 40px;
 
-  font-size: @body-font-size;
+  font-size: 14px;
   line-height: 30px;
   text-align: center;
   text-transform: uppercase;
