--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -26,7 +26,7 @@
 .footer__copyright {
   display: inline-block;
 
-  font-size: @body-font-size;
+  font-size: 14px;
   font-weight: 400;
   line-height: 18px;
   color: @bg-darkblue;
