--- a/source/less/general.less
+++ b/source/less/general.less
@@ -9,7 +9,7 @@
 @font-face {
   font-family: "Open Sans";
   src: url("../fonts/opensansbold.woff") format("woff"),
-      url("../fonts/opensansbold.woff2") format("woff2");
+    url("../fonts/opensansbold.woff2") format("woff2");
   font-weight: bold;
   font-style: normal;
 }
@@ -39,7 +39,7 @@ body {
 
   font-size: 18px;
   line-height: 24px;
-  font-family: "Open Sans", Tahoma, sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   color: @black;
 
   background-color: @white;
