--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,7 +1,12 @@
 .main-nav {
+  margin-bottom: 5px;
+
   font-size: 18px;
+  line-height: 32px;
   font-weight: bold;
   text-transform: uppercase;
+
+  background-color: @bg-darkblue;
 }
 
 .main-nav__list {
@@ -9,14 +14,18 @@
 }
 
 .main-nav__item {
-  box-shadow:
-    inset 0 1px 0 0 fade(@white, 15%),
-    0 1px 0 0 @black;
-  margin-bottom: 2px;
+  // margin-bottom: 2px;
+
+  text-align: center;
+
+  border-bottom: 1px solid @black;
+
+  box-shadow: inset 0 1px 0 0 fade(@white, 15%);
 }
 
 .main-nav__link {
   display: block;
-  padding: 16px;
+  padding: 18px 15px 13px 15px;
+
   color: @white;
 }
