--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,12 +1,15 @@
 .main-nav {
-  margin-bottom: 5px;
-
+  padding-top: 5px;
   font-size: 18px;
   line-height: 32px;
   font-weight: bold;
   text-transform: uppercase;
 
   background-color: @bg-darkblue;
+}
+
+.main-nav__wrapper {
+  .wrapper(@mobile-width);
 }
 
 .main-nav__list {
@@ -25,7 +28,45 @@
 
 .main-nav__link {
   display: block;
-  padding: 18px 15px 13px 15px;
+  padding: 15px 15px 16px 15px;
 
   color: @white;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav__wrapper {
+    .wrapper(@tablet-width);
+  }
+  .main-nav__link {
+    padding: 15px 15px 16px 15px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__wrapper--desktop {
+    .wrapper-reset();
+  }
+
+  .main-nav {
+    line-height: 18px;
+    font-weight: 400;
+    text-transform: none;
+
+    background-color: transparent;
+  }
+
+  .main-nav__list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  .main-nav__item {
+    display: block;
+    padding-left: 85px;
+
+    border-bottom: 1px solid transparent;
+    box-shadow: inset 0 1px 0 0 transparent;
+  }
 }
