Адаптивная сетка для effects

--- a/source/less/blocks/feature.less
+++ b/source/less/blocks/feature.less
@@ -101,5 +101,8 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 30px;
+    letter-spacing: @letter-spacing;
+
+    padding: 0;
   }
 }
