--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,11 +5,13 @@
 // index.html
 @import "blocks/button.less";
 @import "blocks/page-header.less";
+@import "blocks/page-content.less";
 @import "blocks/main-nav.less";
 @import "blocks/intro.less";
 @import "blocks/apps.less";
 @import "blocks/features.less";
 @import "blocks/feature.less";
+@import "blocks/effect.less";
 @import "blocks/reviews.less";
 @import "blocks/review.less";
 @import "blocks/rate.less";
