Адаптивная сетка блока reviews

--- a/source/less/blocks/effect.less
+++ b/source/less/blocks/effect.less
@@ -81,12 +81,14 @@
 @media (min-width: @tablet-width) {
   .effect {
     .wrapper(@tablet-width);
+    min-height: 276px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .effect {
     .wrapper(@desktop-width);
+    min-height: 345px;
   }
 
   .effect__timer {
