--- a/source/less/blocks/feature.less
+++ b/source/less/blocks/feature.less
@@ -21,6 +21,7 @@
   padding-right: 20px;
   font-size: 14px;
   line-height: 24px;
+  letter-spacing: @letter-spacing;
 }
 
 @media (min-width: @tablet-width) {
@@ -37,7 +38,7 @@
   }
 
   .feature__info {
-    padding: 0 10px 0 0;
+    padding: 0;
   }
 }
 
@@ -101,7 +102,6 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 30px;
-    letter-spacing: @letter-spacing;
 
     padding: 0;
   }
