--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -26,8 +26,7 @@
 
 .features__image {
   display: block;
-  margin-bottom: -35px;
-  margin: 0 auto;
+  margin: 0 auto -35px auto;
 }
 
 .features__title {
