--- a/source/less/blocks/page-content.less
+++ b/source/less/blocks/page-content.less
@@ -5,7 +5,7 @@
 .page-content__effect {
   display: none;
 
-  margin: 60px 0 60px 0;
+  padding: 60px 0 60px 0;
 
   background-color: @white;
 }
@@ -19,6 +19,7 @@
 @media (min-width: @desktop-width) {
   .page-content__effect {
     background-color: @bg-gray;
-    margin-top: 0;
+    padding-top: 0;
+    padding-bottom: 70px;
   }
 }
