--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -68,6 +68,11 @@
     background-image: url("../img/bg-back-desktop@1x.jpg");
   }
 
+  .page-header__top--open {
+    background-color: fade(@black, 30%);
+    border-color: transparent;
+  }
+
   .page-header__wrapper {
     .wrapper-reset();
   }
