--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,6 +14,7 @@
 @import "blocks/effect.less";
 @import "blocks/reviews.less";
 @import "blocks/review.less";
+@import "blocks/reviews-slider.less";
 @import "blocks/rate.less";
 @import "blocks/rates.less";
 @import "blocks/contacts.less";
