Адаптивная сетка блока rates

--- a/source/less/blocks/page-content.less
+++ b/source/less/blocks/page-content.less
@@ -10,9 +10,18 @@
   background-color: @white;
 }
 
+.page-content__rates {
+  padding: 70px 0 50px 0;
+}
+
 @media (min-width: @tablet-width) {
   .page-content__effect {
     display: flex;
+  }
+
+  .page-content__rates {
+    padding-top: 82px;
+    padding-bottom: 40px;
   }
 }
 
@@ -20,6 +29,11 @@
   .page-content__effect {
     background-color: @bg-gray;
     padding-top: 0;
+    padding-bottom: 70px;
+  }
+
+  .page-content__rates {
+    padding-top: 122px;
     padding-bottom: 70px;
   }
 }
