--- a/source/less/blocks/reviews-slider.less
+++ b/source/less/blocks/reviews-slider.less
@@ -65,6 +65,12 @@
   display: none;
 }
 
+@media (min-width: @tablet-width) {
+  .reviews-slider {
+    margin-bottom: 0;
+  }
+}
+
 @media (min-width: @desktop-width) {
   .reviews-slider__list {
     position: relative;
