--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -16,6 +16,10 @@
 }
 
 @media (min-width: @tablet-width) {
+  .reviews {
+    padding-bottom: 0;
+  }
+
   .reviews__wrapper {
     .wrapper(@tablet-width);
   }
