--- a/source/less/blocks/rates.less
+++ b/source/less/blocks/rates.less
@@ -1,28 +1,58 @@
 .rates {
   overflow: hidden;
 
-  padding: 100px 0 110px 0;
   background-color: @bg-gray;
   background-image: url("../img/bg-triangle-white.svg");
-  .background(50%, 0%, auto);
-}
-
-.rates__table {
-  position: relative;
-  left: calc(50% - @table-width/2);
-  min-width: @table-width;
-
-  margin: 0 auto;
-  padding-top: 20px;
-
-  border-collapse: separate;
-  border-spacing: 1px;
+  .background(50%, 0%, contain);
 }
 
 .rates__wrapper {
   .wrapper(@mobile-width);
 }
 
+.rates__table {
+  position: relative;
+  left: calc(50% - @desktop-width/2 + 60px);
+  width: calc(@desktop-width - 120px);
+
+  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 30px;
+
+  border-collapse: separate;
+  border-spacing: 1px;
+}
+
 .rates__toggles {
   text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .rates__wrapper {
+    .wrapper(@tablet-width);
+  }
+
+  .rates__table {
+    position: static;
+    width: calc(@tablet-width - 40px);
+
+    box-sizing: border-box;
+  }
+
+  .rates__toggles {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .rates__wrapper {
+    .wrapper(@desktop-width);
+    padding: 0;
+  }
+
+  .rates__table {
+    position: static;
+    min-width: auto;
+    width: calc(@desktop-width - 20px);
+  }
 }
