--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -1,5 +1,5 @@
 .contact {
-  margin-bottom: 28px;
+  margin-bottom: 18px;
 }
 
 .contact__title {
@@ -21,4 +21,11 @@
   line-height: 30px;
   text-align: center;
   color: @text-blood;
+}
+
+@media (min-width: @tablet-width) {
+  .contact {
+    width: 240px;
+    margin: 5px 0 40px 0;
+  }
 }
