--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,9 @@
+.contacts__wrapper {
+  .wrapper(@mobile-width);
+}
+
 .contacts__title {
-  margin: 38px 0;
+  margin: 40px 0 32px 0;
 
   font-size: 24px;
   font-weight: lighter;
@@ -15,16 +19,43 @@
   &::before {
     content: "";
     position: absolute;
-    top: 0;
+    top: -1px;
+    z-index: 1;
 
+    display: block;
     width: 100%;
-    height: 100%;
 
-    background-image: url("../img/bg-triangle-white-footer.svg");
-    .background(50%, 0%, auto);
+    border-right: 50vw solid transparent;
+    border-top: 35px solid #fff;
+    border-left: 50vw solid transparent;
   }
 }
 
-.contacts__wrapper {
-  .wrapper(@mobile-width);
+.contacts__info {
+  padding-bottom: 10px;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__wrapper {
+    .wrapper(@tablet-width);
+  }
+
+  .contacts__info {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-around;
+  }
+
+  .contacts__title {
+    font-size: 40px;
+    line-height: 50px;
+    margin-top: 42px;
+    margin-bottom: 35px;
+    padding: 0 30px;
+  }
+
+  .contacts__map {
+    height: 360px;
+  }
 }
