--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -7,5 +7,13 @@
   height: 100%;
   background-color: @bg-lightgrey;
   background-image: url("../img/bg-map-mobile@1x.png");
-  .background(50%, 100%);
+  .background(50%, 100%, cover);
+}
+
+@media (min-width: @tablet-width) {
+  background-image: url("../img/bg-map-tablet@1x.jpg");
+}
+
+@media (min-width: @desktop-width) {
+  background-image: url("../img/bg-map-desktop@1x.jpg");
 }
